[package]
name       	= "docpos"
version    	= "0.1.0"
edition    	= "2021"
authors    	= ["geo-ant","eugenesvk"]
license    	= "MIT"
homepage   	= "https://github.com/eugenesvk/docpos"
repository 	= "https://github.com/eugenesvk/docpos"
description	= "Compact-document items after defining them (fn, struct, enum) + document fn parameters with rustdoc (⑂roxygen)"
readme     	= "Readme.md"
categories 	= ["rust-patterns","development-tools"]
keywords   	= ["document", "function", "parameters", "arguments", "doxygen"]

[badges]
maintenance = {status="passively-maintained"}

[lib]
proc-macro = true

[dependencies]
quote      	= "1"
proc-macro2	= "1.0"
syn        	= {version="2.0",features=["parsing","full","extra-traits"]}
itertools  	= "0.13.0"
indoc      	= "2.0.5"

[dev-dependencies]
trybuild 	= "1.0"
macrotest	= "1.0"
